--- a/style/style.css
+++ b/style/style.css
@@ -16,6 +16,7 @@ body {
   max-width: 330px;
   padding: 15px;
   margin: auto;
+  background-color: khaki;
 }
 
 .form-signin .checkbox {
@@ -23,21 +24,13 @@ body {
 }
 
 .form-control {
-  margin: 15px 0 15px 0;
+  margin: 10px 0 10px 0;
 }
 
 .form-signin .form-floating:focus-within {
   z-index: 2;
 }
 
-.form-signin input[type="email"] {
-  margin-bottom: -1px;
-  border-bottom-right-radius: 0;
-  border-bottom-left-radius: 0;
-}
-
-.form-signin input[type="password"] {
-  margin-bottom: 10px;
-  border-top-left-radius: 0;
-  border-top-right-radius: 0;
+#reset {
+  margin-top: 10px;
 }
